--- a/environment2.env
+++ b/environment2.env
@@ -15,13 +15,14 @@ First Environment
 # obstacles
 ##########################
 300;250;40;40;45;BLUE
+500;350;40;40;80;BLUE
 600;200;130;10;20;ORANGE
 450;100;130;10;0;GREEN
 400;300;130;10;0;GREEN
 600;450;130;10;0;RED
 700;300;150;10;0;RED
-100;300;80;120;45;BLACK
-300;400;80;120;45;BLACK
+100;300;80;120;50;BLACK
+300;500;80;120;-45;BLACK
 
 
 
